# sparticles

./: .gitignore  LICENSE  README.md  pyproject.toml
diHiggs/: diHiggsdataset.py  diHiggstransforms.py  diHiggsutils.py  diHiggsvisualize.py
src/sparticles/: __init__.py  dataset.py  datasetnew.py  models.py  transforms.py  utils.py  visualize.py
